[gd_scene load_steps=15 format=3 uid="uid://csybo8kth38ma"]

[ext_resource type="Script" uid="uid://dnl76ta4benc0" path="res://scene_cochon/cochon.gd" id="1_p3xf1"]
[ext_resource type="Texture2D" uid="uid://nq7hx0yh314i" path="res://scene_cochon/pig-1a.png" id="3_cmdnc"]
[ext_resource type="Script" uid="uid://bmicekm6uxy4s" path="res://addons/trail_2d/trail_2d.gd" id="3_vxg8k"]
[ext_resource type="AudioStream" uid="uid://qesg2rp267mu" path="res://audio_fxr/jump.sfxr" id="4_yf83q"]
[ext_resource type="AudioStream" uid="uid://cjivawn81ybfi" path="res://audio_fxr/fuse.sfxr" id="5_5k8wr"]
[ext_resource type="AudioStream" uid="uid://dbg6q7q6dk0n" path="res://audio_fxr/ufo.sfxr" id="6_k4cvg"]

[sub_resource type="Curve" id="Curve_0pfo2"]
_data = [Vector2(0.0294118, 0.934066), 0.0, 0.0, 0, 0, Vector2(0.955882, 0.054945), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_ey6g8"]
colors = PackedColorArray(0.983929, 0, 0.335008, 1, 0.105882, 0.0901961, 1, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_46owh"]
size = Vector2(17, 14)

[sub_resource type="Animation" id="Animation_lnuno"]
resource_name = "idle_left"
length = 0.3
loop_mode = 1
step = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="Animation" id="Animation_q4kib"]
resource_name = "idle_right"
length = 0.3
loop_mode = 1
step = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_p0frg"]
resource_name = "move_left"
length = 0.6
loop_mode = 1
step = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [2, 3]
}

[sub_resource type="Animation" id="Animation_ygakx"]
resource_name = "move_right"
length = 0.6
loop_mode = 1
step = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7q7uf"]
_data = {
&"idle_left": SubResource("Animation_lnuno"),
&"idle_right": SubResource("Animation_q4kib"),
&"move_left": SubResource("Animation_p0frg"),
&"move_right": SubResource("Animation_ygakx")
}

[node name="cochon" type="CharacterBody2D"]
scale = Vector2(2, 2)
script = ExtResource("1_p3xf1")

[node name="Trail2D" type="Line2D" parent="."]
z_as_relative = false
width_curve = SubResource("Curve_0pfo2")
default_color = Color(0.803275, 0, 0.15815, 1)
gradient = SubResource("Gradient_ey6g8")
script = ExtResource("3_vxg8k")
length = 20

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 1
texture = ExtResource("3_cmdnc")
hframes = 4
frame = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1.5, 0)
shape = SubResource("RectangleShape2D_46owh")

[node name="anim" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_7q7uf")
}

[node name="son_jump" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_yf83q")
volume_db = -13.22

[node name="son_fuse" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_5k8wr")
volume_db = -22.315

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_k4cvg")
